Fixed formatting on form page to fix the text alignment and spacing

--- a/assgn6/style.css
+++ b/assgn6/style.css
@@ -353,7 +353,6 @@ button {
 /*Styling Form*/
 
 .form{
-	width: 450px;
 	font-size: 16px;
 	padding: 30px 30px 15px 30px;
 }
